tests/errors/var_annotation_bool_mismatch.ptt
// Codex audit P0-5: bool annotation with int value rejected.

use std/string

spark {
  flag is bool 42
}
